force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/tc9_pr__Pay_Batch_Item__c.object-meta.xml
<CustomObject>
    <label>Payee Pay Batch</label>
    <nameField>
        <displayFormat>PPB-{0000000000}</displayFormat>
        <label>Payee Pay Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Pay Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>