force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__AEO_Stopped_Student_Loans__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AEO_Stopped_Student_Loans__c</fullName>
    <description>Indicates whether the presence of certain Attachment of Earnings Order types stopped the calculation of Student Loans.</description>
    <inlineHelpText>Indicates whether the presence of certain Attachment of Earnings Order types stopped the calculation of Student Loans.</inlineHelpText>
    <label>AEO Stopped Student Loans?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>