force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Approved_Working_Holiday_Maker__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Approved_Working_Holiday_Maker__c</fullName>
    <description>Indicates that the payee is an Approved Working Holiday Maker during this calendar period.</description>
    <inlineHelpText>Indicates that the payee is an Approved Working Holiday Maker during this calendar period.</inlineHelpText>
    <label>Approved Working Holiday Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>