force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Payee Pay Batch</relationshipLabel>
    <relationshipName>Payee_Pay_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>