force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__ATO_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Income_Classification__c</fullName>
    <description>The ATO Income Classification inherited from the relevant Payee Withholding record</description>
    <inlineHelpText>The ATO Income Classification inherited from the relevant Payee Withholding record</inlineHelpText>
    <label>ATO Income Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Income_Classification</valueSetName>
    </valueSet>
</CustomField>