force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Calculation_Locked__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calculation_Locked__c</fullName>
    <description>Indicates that the Payee Pay Batch record calculation results are locked.</description>
    <inlineHelpText>Indicates that the Payee Pay Batch record calculation results are locked.</inlineHelpText>
    <label>Calculation Locked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>