force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Calculation_Version__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calculation_Version__c</fullName>
    <description>Indicates how many times this payee has been calculated for the Calendar Period.</description>
    <inlineHelpText>Indicates how many times this payee has been calculated for the Calendar Period.</inlineHelpText>
    <label>Calculation Version</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>