force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Pay Calendar Period that applies to the Payee Pay Batch</description>
    <inlineHelpText>Defines the Pay Calendar Period that applies to the Payee Pay Batch</inlineHelpText>
    <label>Pay Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Pay Batch</relationshipLabel>
    <relationshipName>Payee_Pay_Batch_Records</relationshipName>
    <type>Lookup</type>
</CustomField>