force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Deduction_Quantity_Worked__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Quantity_Worked__c</fullName>
    <description>Total number of units calculated for deduction processing.</description>
    <inlineHelpText>Total number of units calculated for deduction processing.</inlineHelpText>
    <label>Deduction Quantity Worked</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>