force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee the Payee Pay Batch Record applies to</description>
    <inlineHelpText>The Employee the Payee Pay Batch Record applies to</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payee_Pay_Batch_Records</relationshipName>
    <type>Lookup</type>
</CustomField>