force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Error_on_Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Error_on_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that there is a data error on a related Assignment</description>
    <inlineHelpText>Indicates that there is a data error on a related Assignment</inlineHelpText>
    <label>Error on Assignment</label>
    <type>Checkbox</type>
</CustomField>