force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Error_on_Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Error_on_Pay_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that there is a data error on a related Pay Transaction</description>
    <inlineHelpText>Indicates that there is a data error on a related Pay Transaction</inlineHelpText>
    <label>Error on Pay Transaction</label>
    <type>Checkbox</type>
</CustomField>