force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Error_on_PayBatchItem__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Error_on_PayBatchItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that there is a data error on a related Payee Pay Batch record. This is raised as a warning. A warning can be bypassed if the Enforce Flag Validation custom setting (Payroll_Configuration__c.Enforce_Flag_Validation__c) is set to False.</description>
    <inlineHelpText>Indicates that there is a data error on a related Payee Pay Batch record. This is raised as a warning. A warning can be bypassed if the Enforce Flag Validation custom setting (Payroll_Configuration__c.Enforce_Flag_Validation__c) is set to False.</inlineHelpText>
    <label>Error on PayBatchItem</label>
    <type>Checkbox</type>
</CustomField>