force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Error_on_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Error_on_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that there is a data error on the related Payee</description>
    <inlineHelpText>Indicates that there is a data error on the related Payee</inlineHelpText>
    <label>Error on Payee</label>
    <type>Checkbox</type>
</CustomField>