force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__ETP_Non_Taxable_N__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Non_Taxable_N__c</fullName>
    <description>ETP Type N non taxable component.</description>
    <inlineHelpText>ETP Type N non taxable component.</inlineHelpText>
    <label>ETP Non Taxable N</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>