force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__ETP_Taxable_P__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Taxable_P__c</fullName>
    <description>ETP Type P taxable component.</description>
    <inlineHelpText>ETP Type P taxable component.</inlineHelpText>
    <label>ETP Taxable P</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>