force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__ETP_Taxable_S__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Taxable_S__c</fullName>
    <description>ETP Type S taxable component.</description>
    <inlineHelpText>ETP Type S taxable component.</inlineHelpText>
    <label>ETP Taxable S</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>