force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__ETP_Taxable_T__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Taxable_T__c</fullName>
    <description>ETP Type T taxable component.</description>
    <inlineHelpText>ETP Type T taxable component.</inlineHelpText>
    <label>ETP Taxable T</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>