force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Exclude_From_Payment_File__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Payment_File__c</fullName>
    <description>Indicates that the Payee Pay Batch will be excluded during Payment File creation</description>
    <inlineHelpText>Indicates that the Payee Pay Batch will be excluded during Payment File creation</inlineHelpText>
    <label>Exclude From Payment File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>