force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Expense_Reimbursements__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expense_Reimbursements__c</fullName>
    <description>The sum total of all related Pay Transactions with a record type of Expense</description>
    <inlineHelpText>The sum total of all related Pay Transactions with a record type of Expense</inlineHelpText>
    <label>Expense Reimbursements</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>