force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__FBT_Taxable__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__FBT_Taxable__c</fullName>
    <description>The total value of related taxable FBT pay transactions.</description>
    <inlineHelpText>The total value of related taxable FBT pay transactions.</inlineHelpText>
    <label>FBT Taxable</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>