force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Finalise_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Finalise_Calendar_Period__c</fullName>
    <description>The calendar period used to determine Month, Quarter and Year End Dates for use during the Finalise pay batch process.</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Finalise_Calendar_Period__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calendar period used to determine Month, Quarter and Year End Dates for use during the Finalise pay batch process.</inlineHelpText>
    <label>Finalise Calendar Period</label>
    <type>Text</type>
</CustomField>