force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Finalise_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Finalise_Year_End_Date__c</fullName>
    <description>The Year End Date of the Finalise Calendar Period. This indicates which financial year the Payee Pay Batch was included in.</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Finalise_Calendar_Period__r.tc9_pr__Year_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Year End Date of the Finalise Calendar Period. This indicates which financial year the Payee Pay Batch was included in.</inlineHelpText>
    <label>Finalise Year End Date</label>
    <type>Date</type>
</CustomField>