force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_AUS_PAYG_Refund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_AUS_PAYG_Refund__c</fullName>
    <description>A refund of PAYG, HELP or SFSS has been calculated</description>
    <formula>If(OR(tc9_pr__SFSS__c &lt; 0,tc9_pr__HELP__c &lt; 0,tc9_pr__PAYG_excl_ETP__c &lt; 0),&quot;Warning: PAYG Refund&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A refund of PAYG, HELP or SFSS has been calculated</inlineHelpText>
    <label>Flag AUS PAYG Refund</label>
    <type>Text</type>
</CustomField>