force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Back_Pay_Processed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Back_Pay_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that system generated pay transactions for Back Pay are included in the calculation.</description>
    <inlineHelpText>Indicates that system generated pay transactions for Back Pay are included in the calculation.</inlineHelpText>
    <label>Flag Back Pay Processed</label>
    <type>Checkbox</type>
</CustomField>