force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Custom_Text__c</fullName>
    <description>Descriptive text of custom warning flags (if populated by custom processes)</description>
    <inlineHelpText>Descriptive text of custom warning flags (if populated by custom processes)</inlineHelpText>
    <label>Flag Custom Text</label>
    <type>TextArea</type>
</CustomField>