force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Future_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Future_Calendar_Period__c</fullName>
    <description>Indicates that the End Date of the Pay Calendar Period on the Payee Pay Batch is greater than the End Date of the Pay Calendar Period on the related Pay Batch</description>
    <formula>If ( tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c &gt; tc9_pr__Pay_Batch__r.tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c ,&quot;Future Calendar Period&quot; , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the End Date of the Pay Calendar Period on the Payee Pay Batch is greater than the End Date of the Pay Calendar Period on the related Pay Batch</inlineHelpText>
    <label>Flag Future Pay Calendar Period</label>
    <type>Text</type>
</CustomField>