force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Maximum_Net_Pay__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Maximum_Net_Pay__c</fullName>
    <description>Net pay is above the maximum defined on the Schedule</description>
    <formula>If(AND(tc9_pr__Payee_Pay_Batch__c = null,NOT(ISBLANK(tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Maximum_Net_Pay__c)),tc9_pr__Total_Net_Earnings_Expense_Reimburseme__c &gt; tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Maximum_Net_Pay__c),&quot;High Net: &quot;&amp; Text(tc9_pr__Total_Net_Earnings_Expense_Reimburseme__c),&quot;&quot;)</formula>
    <inlineHelpText>Net pay is above the maximum defined on the Schedule</inlineHelpText>
    <label>Flag Maximum Net Pay</label>
    <type>Text</type>
</CustomField>