force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Minimum_Gross_Pay__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Minimum_Gross_Pay__c</fullName>
    <description>Gross pay is below the minimum defined on the Schedule</description>
    <formula>If(AND(tc9_pr__Payee_Pay_Batch__c = null,!(ISBLANK(tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Minimum_Gross_Pay__c)),tc9_pr__Gross__c &lt; tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Minimum_Gross_Pay__c),&quot;Low Gross: &quot;&amp; Text(tc9_pr__Gross__c),&quot;&quot; )</formula>
    <inlineHelpText>Gross pay is below the minimum defined on the Schedule</inlineHelpText>
    <label>Flag Minimum Gross Pay</label>
    <type>Text</type>
</CustomField>