force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Minimum_Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Minimum_Total_Quantity__c</fullName>
    <description>Total Quantity  is below the minimum defined on the Schedule</description>
    <formula>If(AND(ISBLANK(tc9_pr__Payee_Pay_Batch__c),!(ISBLANK(tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Minimum_Total_Quantity__c)),tc9_pr__Total_Quantity__c &lt; tc9_pr__Pay_Batch__r.tc9_pr__Schedule__r.tc9_pr__Warning_Minimum_Total_Quantity__c),&quot;Low Quantity: &quot;&amp;Text(tc9_pr__Total_Quantity__c),&quot;&quot;)</formula>
    <inlineHelpText>Total Quantity  is below the minimum defined on the Schedule</inlineHelpText>
    <label>Flag Minimum Total Quantity</label>
    <type>Text</type>
</CustomField>