force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Payee_Cessation_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Payee_Cessation_Date__c</fullName>
    <description>Payee Cessation Date is on or before the end date of the Calendar Period</description>
    <formula>IF(AND(tc9_pr__Payee_Pay_Batch__c = null,tc9_pr__Payee__r.tc9_pr__Cessation_Date__c &lt;= tc9_pr__Calendar_Period__r.tc9_pr__End_Date__c),&quot;Cessation Date: &quot;&amp;TEXT(tc9_pr__Payee__r.tc9_pr__Cessation_Date__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payee Cessation Date is on or before the end date of the Calendar Period</inlineHelpText>
    <label>Flag Payee Cessation Date</label>
    <type>Text</type>
</CustomField>