force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flag_Payee_Withholding__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flag_Payee_Withholding__c</fullName>
    <description>Warnings related to Payee Withholding calculations.</description>
    <inlineHelpText>Warnings related to Payee Withholding calculations.</inlineHelpText>
    <label>Flag Payee Withholding</label>
    <type>TextArea</type>
</CustomField>