force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flags_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flags_Acknowledged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who acknowledged the warning flags</description>
    <inlineHelpText>The user who acknowledged the warning flags</inlineHelpText>
    <label>Flags Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payee_Pay_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>