force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Flags_Acknowledged_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Flags_Acknowledged_On__c</fullName>
    <description>The date/time the user acknowledged the warning flags</description>
    <inlineHelpText>The date/time the user acknowledged the warning flags</inlineHelpText>
    <label>Flags Acknowledged On</label>
    <type>DateTime</type>
</CustomField>