force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Gross__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Gross__c</fullName>
    <description>The sum total of all earnings less deductions</description>
    <inlineHelpText>The sum total of all earnings less deductions</inlineHelpText>
    <label>Gross</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>