force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__GST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST__c</fullName>
    <description>The sum total of the Contractor GST field on all related Pay Transactions with a Record Type of Withholding - GST</description>
    <inlineHelpText>The sum total of the Contractor GST field on all related Pay Transactions with a Record Type of Withholding - GST</inlineHelpText>
    <label>GST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>