force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__HELP__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__HELP__c</fullName>
    <description>The sum total of the HELP field on all related Pay Transactions with a Record Type of Withholding - ETP PAYG or Withholding - PAYG</description>
    <inlineHelpText>The sum total of the HELP field on all related Pay Transactions with a Record Type of Withholding - ETP PAYG or Withholding - PAYG</inlineHelpText>
    <label>HELP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>