force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Incomplete_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Incomplete_Reason__c</fullName>
    <formula>SUBSTITUTE(IF(NOT(ISBLANK(tc9_pr__Flag_Maximum_Gross_Pay__c)), tc9_pr__Flag_Maximum_Gross_Pay__c + &quot;,&quot; , NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_Maximum_Net_Pay__c)), tc9_pr__Flag_Maximum_Net_Pay__c + &quot;,&quot;, NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_Maximum_Total_Quantity__c)), tc9_pr__Flag_Maximum_Total_Quantity__c + &quot;,&quot;, NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_Minimum_Gross_Pay__c)), tc9_pr__Flag_Minimum_Gross_Pay__c + &quot;,&quot;, NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_Minimum_Net_Pay__c)), tc9_pr__Flag_Minimum_Net_Pay__c + &quot;,&quot;, NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_Minimum_Total_Quantity__c)), tc9_pr__Flag_Minimum_Total_Quantity__c + &quot;,&quot;, NULL)&amp; 
IF(NOT(ISBLANK(tc9_pr__Flag_AUS_PAYG_Refund__c)), tc9_pr__Flag_AUS_PAYG_Refund__c + &quot;,&quot;, NULL)&amp; 
IF(AND(NOT(ISBLANK(tc9_pr__Flag_Custom_Text__c)), tc9_pr__Flag_Custom_Indicator__c = true), tc9_pr__Flag_Custom_Text__c + &quot;,&quot;, NULL) + &quot; &quot;, &quot;, &quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete Reason</label>
    <type>Text</type>
</CustomField>