force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Last_Reversed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Last_Reversed__c</fullName>
    <description>To stamp the date and time of transaction being reversed</description>
    <inlineHelpText>To stamp the date and time of transaction being reversed</inlineHelpText>
    <label>Last Reversed</label>
    <type>DateTime</type>
</CustomField>