force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Lump_Sum_W__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Lump_Sum_W__c</fullName>
    <description>The total value of related Lump Sum W pay transactions.</description>
    <inlineHelpText>The total value of related Lump Sum W pay transactions.</inlineHelpText>
    <label>Lump Sum W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>